<resources>
    <string name="app_name">SeekMessenger</string>
    <string name="login_hint">login</string>
    <string name="password_hint">password</string>
    <string name="email_hint">e-mail</string>
    <string name="register">Sign up</string>
    <string name="new_registration">new profile</string>
    <string name="auth_failed">Authentication failed.</string>
    <string-array name="login_tabs">
        <item>Log in</item>
        <item>Sign up</item>
    </string-array>
    <string name="hello_blank_fragment">Hola!</string> //todo: убрать
    <string name="login">Log in</string>
    <string name="welcome_back">Welcome back</string>
    <string name="no_such_email">Invalid email</string>
    <string name="invalid_password">Password must contain 1 number, 1 lowercase, 1 uppercase, 1 special symbol and be longer than 8</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_home">Home</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_gallery">Gallery</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>